alberico.rodrigo - <<Android>>Adição do cache do login e trocar usuário.

--- a/Source/HomeAutomexMobile/Projeto Final/HomeAutomex/res/menu/main.xml
+++ b/Source/HomeAutomexMobile/Projeto Final/HomeAutomex/res/menu/main.xml
@@ -10,6 +10,16 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="PROGRAMAÇÃO"/>
+     <item
+        android:id="@+id/trocarUsuario"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="TROCAR USUÁRIO"/>
+     <item
+        android:id="@+id/sair"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="SAIR"/>
      <!--  <item
         android:id="@+id/ListarCenario"
         android:orderInCategory="100"
