--- a/Source/HomeAutomexMobile/Projeto Final/HomeAutomex/res/layout/activity_cenario.xml
+++ b/Source/HomeAutomexMobile/Projeto Final/HomeAutomex/res/layout/activity_cenario.xml
@@ -7,7 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".CenarioActivity" 
-    android:background="@drawable/back5">
+    android:background="@drawable/background">
 
     <TextView
         android:id="@+id/textView1"
@@ -18,7 +18,7 @@
         android:layout_marginTop="20dp"
         android:text="DESCRIÇÃO DO CENÁRIO"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#fff" />
+        android:textColor="#ffffff" />
 
     <Button
         android:id="@+id/btnCdastroCenario"
