--- a/Source/HomeAutomexMobile/Projeto Final/HomeAutomex/res/layout/activity_favoritos.xml
+++ b/Source/HomeAutomexMobile/Projeto Final/HomeAutomex/res/layout/activity_favoritos.xml
@@ -7,7 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".TesteListviewActivity" 
-    android:background="@drawable/back"
+    android:background="@drawable/background"
     >
 
     <ExpandableListView
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textBoasVindas"
-         android:textColor="#fff"
+         android:textColor="#ffffff"
         android:layout_marginTop="28dp" >
     </ExpandableListView>
 
