--- a/Source/HomeAutomexMobile/Projeto Final/HomeAutomex/res/layout/activity_listar_cenarios.xml
+++ b/Source/HomeAutomexMobile/Projeto Final/HomeAutomex/res/layout/activity_listar_cenarios.xml
@@ -7,7 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".ListarCenariosActivity"
-    android:background="@drawable/back5" >
+    android:background="@drawable/background" >
     
      <ListView
         android:id="@+id/listViewCenarios"
@@ -25,6 +25,7 @@
          android:layout_alignParentTop="true"
          android:layout_centerHorizontal="true"
          android:text="CENÁRIOS CADASTRADOS"
-         android:textAppearance="?android:attr/textAppearanceLarge" />
+         android:textAppearance="?android:attr/textAppearanceLarge"
+         android:textColor="#ffffff" />
 
 </RelativeLayout>
