--- a/Source/HomeAutomexMobile/Projeto Final/HomeAutomex/res/layout/activity_portao.xml
+++ b/Source/HomeAutomexMobile/Projeto Final/HomeAutomex/res/layout/activity_portao.xml
@@ -7,7 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".PortaoActivity" 
-    android:background="@drawable/back10">
+    android:background="@drawable/background">
 
     <Switch
         android:id="@+id/switchPortao"
