--- a/Source/HomeAutomexMobile/Projeto Final/HomeAutomex/res/layout/activity_programacao.xml
+++ b/Source/HomeAutomexMobile/Projeto Final/HomeAutomex/res/layout/activity_programacao.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/back5"
+    android:background="@drawable/background"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -16,7 +16,8 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:text="AGENDAR DISPOSITIVOS"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#ffffff" />
 
     <EditText
         android:id="@+id/editAgendamento"
@@ -35,7 +36,8 @@
         android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView1"
         android:layout_marginTop="29dp"
-        android:text="Descrição do agendamento" />
+        android:text="Descrição do agendamento"
+        android:textColor="#ffffff" />
 
     <EditText
         android:id="@+id/editTextData"
@@ -52,7 +54,8 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="29dp"
         android:layout_toRightOf="@+id/editText2"
-        android:text="Cadastrar Agendamento" />
+        android:text="Cadastrar Agendamento"
+        android:textColor="#ffffff" />
 
     <CheckBox
         android:id="@+id/checkBoxAgendamento"
@@ -60,7 +63,8 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/btnCadastroAgendamento"
         android:layout_alignLeft="@+id/btnCadastroAgendamento"
-        android:text="Status" />
+        android:text="Status"
+        android:textColor="#ffffff" />
 
     <TextView
         android:id="@+id/textView3"
@@ -68,7 +72,8 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/editTextData"
         android:layout_alignLeft="@+id/editAgendamento"
-        android:text="Data e Hora do agendamento" />
+        android:text="Data e Hora do agendamento"
+        android:textColor="#ffffff" />
 
     <EditText
         android:id="@+id/editTextHora"
